# ai-pixel-art-image-generation

./: .gitignore  README.md  SKILL.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
assets/examples/animation_knight/: knight_walk.tsx
assets/examples/tileset_overworld/: overworld.tmj  overworld.tsx
docs/: index.md  install.md
docs/cookbook/: animation.md  general-image.md  index.md  pixelize.md  sprite.md  tileset.md
docs/reference/: palettes.md  qa.md
docs/stylesheets/: extra.css
references/: pixel_art_prompting.md  tiled_format.md
scripts/: export_tiled.py  generate_animation.py  generate_image.py  generate_sprite.py  generate_tileset.py  pixelize.py  qa_report.py
scripts/lib/: azure_client.py  gemini_client.py  image_client.py  image_options.py  openai_client.py  outline.py  palettes.py  prompt_style.py  qa_metrics.py  seamless.py
